Se creo vista de clientes

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -335,7 +335,7 @@
         <div class="container-fluid">
             <ul class="nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
+                    <a asp-controller="Clientes" asp-action="Index" class="nav-link">
                         <i class="fas fa-users"></i>
                         <span>Clientes</span>
                     </a>
